syntax = "proto3";
package containerlifecycle;
option go_package = "pb";

service ContainerLifecycleService {
  rpc StartContainer (StartContainerRequest) returns (StartContainerResponse);
  rpc StartCommand (StartCommandRequest) returns (StartCommandResponse);
  rpc StopContainer (StopContainerRequest) returns (StopContainerResponse);
}

message StartContainerRequest {
  string ID = 1;
}

message StartCommandRequest {
  string ID = 1;
  string cmd = 2;
}

message StopContainerRequest {
  string ID = 1;
}

message StartContainerResponse {
    string error = 1;
}

message StartCommandResponse {
    string ID = 1;
    string error = 2;
}

message StopContainerResponse {
    string error = 1;
}
